# Sprout-Exam

./: .gitignore  README.md
backend/: .gitignore  Dockerfile  README.md  build.sh  conftest.py  docker-compose.yml  pyproject.toml  sample.env
backend/src/: auth.py  const.py  context.py  db.py  enums.py  logger.py  main.py  middleware.py  settings.py  types.py  utils.py
backend/src/models/: assignments.py  audit.py  base.py  benefit.py  employee.py  jwt.py  project.py  user.py
backend/src/routers/v1/: api.py  auth.py  benefit.py  employee.py  project.py
backend/src/tests/: test_assignments.py  test_benefits.py  test_employees.py  test_projects.py  utils.py
frontend/: .prettierrc.json  .sample.env  Dockerfile  README.md  bun.lockb  docker-compose.yml  index.html  package.json
frontend/src/: App.vue  const.js  enums.js  main.js
frontend/src/assets/: Sprout-Logo-1-02-1.png:Zone.Identifier  main.css
frontend/src/components/: Card.vue  CreateForm.vue  EditForm.vue  Login.vue  Toolbar.vue
frontend/src/router/: index.js
frontend/src/stores/: admin.js  auth.js  token.js
frontend/src/views/: AdminView.vue  EmployeeView.vue  HomeView.vue
