[tool.poetry]
name = "sproutexamapi"
version = "0.1.0"
description = "Backend for Sprout Exam"
authors = ["Brandon Blanker Lim-it"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
fastapi = {extras = ["all"], version = "^0.109.0"}
asgi-correlation-id = "^4.3.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
